--- a/www/comparativas/hosting-ecommerce.html
+++ b/www/comparativas/hosting-ecommerce.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto WordPress.">
+    <meta name="description" content="Comparativa entre los principales proveedores de Hosting para alojar tu e-commerce o tienda online.">
     <meta name="author" content="Adrian Perez">
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Comparativa Hosting WordPress" />
-    <meta property="og:description" content="Comparativa entre los principales proveedores de Hosting para alojar un proyecto WordPress." />
+    <meta property="og:title" content="Comparativa Hosting e-commerce o tienda online" />
+    <meta property="og:description" content="Comparativa entre los principales proveedores de Hosting para alojar tu e-commerce o tienda online." />
     <meta property="og:url" content="https://quehosting.es/" />
     <meta property="og:site_name" content="Comparativa Hosting España" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:label1" content="Tiempo de lectura" />
     <meta name="twitter:data1" content="2 minutos" />
-    <title>Comparativa Hosting WordPress</title>
+    <title>Comparativa Hosting e-commerce o tienda online</title>
 
     <link rel="canonical" href="https://quehosting.es">
 
@@ -36,7 +36,7 @@
         },{
           "@type": "ListItem",
           "position": 3,
-          "name": "Hosting WordPress"
+          "name": "Hosting e-commerce"
         }]
       }
     </script>
@@ -106,42 +106,26 @@
 
       <div class="container">
         
-        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting WordPress</h1>
-        <h2>¿Qué es un hosting WordPress?</h2>
+        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting e-commerce</h1>
+        <h2>¿Qué es un hosting e-commerce o tienda online?</h2>
 
         <div style="margin: 50px 0px 50px 0px;">
-          <p><strong>WordPress</strong> es sin duda alguna la aplicación más usada para la creación de todo tipo de páginas web. Si bien en sus inicios era una herramienta que facilitaba la creación de páginas personales o blogs, la aparición de decenas de miles de plugins, temas y extensiones hacen que hoy en día encontremos páginas web hechas con <strong>WordPress</strong> para prácticamente cualquier caso de uso, incluyendo e-commerce, blogs, catálogos o páginas de empresa o proyectos.</p>
-          <p>Mayormente, el éxito de WordPress se debe a su facilidad de uso; cualquiera pese a no tener conocimientos de informática puede crear su propia web con <strong>WordPress</strong>, aunque si bien es cierto que con conocimientos técnicos se podrá llevar un proyecto <strong>WordPress</strong> al siguiente nivel.</p>
-          <p>Es por su popularidad y por tanto por su alta demanda, que los planes de alojamiento específicamente para <strong>WordPress</strong> se encuentran presentes en todo buen proveedor de hosting que se precie, siendo de los más demandados por los usuarios. Éstos suelen ofrecer alojamiento con <strong>WordPress</strong> ya pre-instalado y totalmente gestionado, con lo que el usuario únicamente debería centrarse en su personalización para poder empezar ya a subir contenido a su sitio web, olvidándose así de tareas como la instalación de actualizaciones.</p>
-          <p>En el <strong>comparador de hostings</strong> de <a href="https://quehosting.es">quehosting.es</a> podrás buscar por planes de hosting específicos para <strong>WordPress</strong> entre los que podrás comparar precios y características para escoger el que mejor se adapte a tus necesidades, de entre proveedores de tanto renombre como:</p>  
+          <p>Cada vez más son los proveedores que ofrecen planes de alojamiento web específicos, para alojar tiendas de comercio online o e-commerce, con soluciones pre-instaladas y gestionadas, similar a como ocurre con los planes de <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">alojamiento WordPress</a>. Se trata pues, de planes de hosting que nos ofrecen una plataforma como <a href="https://en.wikipedia.org/wiki/PrestaShop" target="_blank">Prestashop</a> o <a href="https://en.wikipedia.org/wiki/WooCommerce" target="_blank">WooCommerce</a>, listas para que el usuario configure su tienda y empiece a ofrecer sus productos en internet, sin tener que preocuparse de su instalación o de aplicar actualizaciones.</p>
+          <p>Igual que pasa con WordPress, estas plataformas suelen ser opensource, con lo que un usuario avanzado podría contratar un <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> y alojar ahí su PrestaShop o similar. Sin embargo, el hecho de que se ofrezcan planes de <strong>hosting e-commerce</strong> con las soluciones pre-instaladas, facilitan mucho la vida a los usuarios estándar y ahorran trabajo a aquellos que de otra forma, tendrían que haberse instalado y configurado ellos mismos la plataforma en un Hosting Web tradicional.</p>
+          <p>En <a href="https://quehosting.es">quehosting.es</a> hemos querido incluir planes de <strong>hosting e-commerce</strong> de diferentes proveedores, para facilitar al usuario elegir el que mejor se adapte a sus necesidades, de entre proveedores tan conocidos como:</p>
         </div>
         
         <table class="table">
-          <caption>Hosting WordPress</caption>
+          <caption>Hosting e-commerce</caption>
           <tr>
             <th>Proveedor</th>
             <th>Planes WordPress</th>
             <th>Precios</th>
           </tr>
           <tr>
-            <td>Hostinger</td>
-            <td>Starter, Premium o Enterprise</td>
-            <td>desde 1.99€</td>
-          </tr>
-          <tr>
-            <td>BlueHost</td>
-            <td>Basic, Plus o Gestionado</td>
-            <td>desde 3.27€</td>
-          </tr>
-          <tr>
             <td>Hostinet</td>
-            <td>WordPress 1, 2 o 3</td>
+            <td>Prestashop o WooCommerce</td>
             <td>desde 4.43€</td>
-          </tr>
-          <tr>
-            <td>Raiola Networks</td>
-            <td>Inicio, Base, Medio o Pro</td>
-            <td>desde 5.95€</td>
           </tr>
           <tr>
             <td>SiteGround</td>
@@ -149,14 +133,9 @@
             <td>desde 5.99€</td>
           </tr>
           <tr>
-            <td>WebEmpresa</td>
-            <td>Plan M, Plan L o Plan XL</td>
-            <td>desde 6.58€</td>
-          </tr>
-          <tr>
             <td>TropicalServer</td>
-            <td>S, M, L o XL</td>
-            <td>desde 7.41€</td>
+            <td>PrestaShop-S, M, L, XL o XXL</td>
+            <td>desde 9.91€</td>
           </tr>
         </table>
       </div><!-- /.container -->
