--- a/www/faq.html
+++ b/www/faq.html
@@ -197,10 +197,10 @@
         </p>
         <div class="collapse" id="options3">En el mundo del hosting existen diversos <strong>tipos de hosting</strong> en funciónd el tipo de proyecto a alojar. Por ejemplo, si vas a usar una solución popular como <strong>WordPress</strong>, prácticamente todos los proveedores ofrecerán planes pensados específicamente para alojar este tipo de proyectos, haciendo la gestión del mismo algo mucho más sencillo para el usuario. A grandes rasgos, tendríamos los siguientes <strong>tipos de hosting</strong>:
           <ul>
-            <li><strong>WordPress</strong>: con WordPress pre-instalado, pensado para alojar sitios web WordPress.</li>
-            <li><strong>eCommerce</strong>: con alguna solución de e-commerce preinstalada, pensada para alojar webs de comercio electrónico.</li>
+            <li><strong>WordPress</strong>: con WordPress pre-instalado, pensado para alojar sitios web WordPress. [<a href="https://quehosting.es/comparativas/hosting-wordpress.html">Más información</a>]</li>
+            <li><strong>eCommerce</strong>: con alguna solución de e-commerce preinstalada, pensada para alojar webs de comercio electrónico. [<a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Más información</a>]</li>
             <li><strong>VPS</strong>: servidor privado virtual, no compartido, con acceso de administrador (root) para gestionar todos los detalles; desde el sistema operativo hasta la configuración del servidor de aplicaciones.</li>
-            <li><strong>Web</strong>: servidor con un servidor de aplicaciones web Apache o similar, listo para alojar páginas web con tecnologías como HTML, PHP o MySQL, o tu incluso tu propio CMS compatible.</li>
+            <li><strong>Web</strong>: servidor con un servidor de aplicaciones web Apache o similar, listo para alojar páginas web con tecnologías como HTML, PHP o MySQL, o tu incluso tu propio CMS compatible. [<a href="https://quehosting.es/comparativas/hosting-web.html">Más información</a>]</li>
             <li><strong>Reseller</strong>: servidores gestionados con diferentes cuentas para tus clientes.</li>
             <li><strong>Dedicado</strong>: servidor físico dedicado, con todos los recursos del mismo disponibles y acceso de root.</li> 
             <li><strong>Cloud/ElasticCloud</strong>: servidor privado virtual ampliable en caliente.</li>
@@ -293,7 +293,7 @@
         <hr class="featurette-divider" style="margin: 20px 0;">
         <p class="text-center">El diseño de este sitio web bebe del template de Boostrap "<a href="https://getbootstrap.com/docs/4.5/examples/carousel/" target="_blank">Carousel</a>" por Mark Otto, Jacob Thornton y otros.</p>
         <p class="text-center">&copy; 2021 QueHosting.es</p>
-        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a></p>
+        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> | <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Hosting e-commerce</a></p>
       </footer>
     </main>
   
