--- a/www/comparativas/hosting-web.html
+++ b/www/comparativas/hosting-web.html
@@ -157,7 +157,7 @@
         <hr class="featurette-divider" style="margin: 20px 0;">
         <p class="text-center">El diseño de este sitio web bebe del template de Boostrap "<a href="https://getbootstrap.com/docs/4.5/examples/carousel/" target="_blank">Carousel</a>" por Mark Otto, Jacob Thornton y otros.</p>
         <p class="text-center">&copy; 2021 QueHosting.es</p>
-        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a></p>
+        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> | <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Hosting e-commerce</a></p>
       </footer>
     </main>
   
