fix canonical references

--- a/www/comparativas/hosting-ecommerce.html
+++ b/www/comparativas/hosting-ecommerce.html
@@ -17,7 +17,7 @@
     <meta name="twitter:data1" content="2 minutos" />
     <title>Comparativa Hosting e-commerce o tienda online</title>
 
-    <link rel="canonical" href="https://quehosting.es">
+    <link rel="canonical" href="https://quehosting.es/comparativas/hosting-ecommerce.html">
 
     <script type="application/ld+json">
       {
