--- a/www/comparativas/hosting-web.html
+++ b/www/comparativas/hosting-web.html
@@ -17,7 +17,7 @@
     <meta name="twitter:data1" content="2 minutos" />
     <title>Comparativa Hosting Web</title>
 
-    <link rel="canonical" href="https://quehosting.es">
+    <link rel="canonical" href="https://quehosting.es/comparativas/hosting-web.html">
 
     <script type="application/ld+json">
       {
