--- a/www/comparativas/hosting-wordpress.html
+++ b/www/comparativas/hosting-wordpress.html
@@ -172,7 +172,7 @@
     </main>
   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/hosting-compare.js"></script>
   </body>
 </html>
