--- a/www/index.html
+++ b/www/index.html
@@ -135,7 +135,7 @@
 
                   <!-- FILTER HEADER-->
                   <div class='row' style="padding: 0px 00px 20px 20px;">
-                    <img src="img/filter.svg" style="height: 25px; margin-right: 15px;" /> Filtros
+                    <img src="img/filter.svg" width="25" height="25" style="height: 25px; margin-right: 15px;" /> Filtros
                   </div>
 
                   <!-- FORM HOSTING-TYPE -->
@@ -263,7 +263,7 @@
     </main>
   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/viewport.js"></script>
     <script src="js/hosting-compare.js"></script>
   </body>
