Fixed broken internal links + resources refactor

--- a/www/404.html
+++ b/www/404.html
@@ -36,7 +36,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -57,7 +57,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -65,10 +65,10 @@
         <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="https://quehosting.es">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
+              <a class="nav-link" href="https://quehosting.es/faq.html">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
@@ -77,16 +77,12 @@
 
     <main role="main">
 
-
       <div class="container">
-        
         <h1 class="text-center" style="margin: 100px 0px 50px 0px;">Error 404 - Página no encontrada</h1>
         <p class="text-center">La página que buscabas no existe. Quizá hayas llegado aquí por error o al introducir una url incorrecta.</p>
         <p class="text-center">Te recomendamos que vuelvas a la página de inicio y navegues a través de los enlaces de la propia web.</p>
         <p class="text-center" style="margin-bottom: 100px;"><a class="btn btn-lg btn-primary" href="index.html" role="button">Página de inicio</a></p>
-
       </div><!-- /.container -->
-
 
       <!-- FOOTER -->
       <footer class="container small">
@@ -95,10 +91,8 @@
         <p class="text-center">&copy; 2021 QueHosting.es</p>
         <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> | <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Hosting e-commerce</a></p>
       </footer>
+
     </main>
   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/hosting-compare.js"></script>
   </body>
 </html>
