--- a/www/comparativas/hosting-ecommerce.html
+++ b/www/comparativas/hosting-ecommerce.html
@@ -62,7 +62,8 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/comparativa.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -83,7 +84,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es/">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -106,10 +107,10 @@
 
       <div class="container">
         
-        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting e-commerce</h1>
+        <h1 class="margin-100-50">Comparativa Hosting e-commerce</h1>
         <h2>¿Qué es un hosting e-commerce o tienda online?</h2>
 
-        <div style="margin: 50px 0px 50px 0px;">
+        <div class="margin-50-50">
           <p>Cada vez más son los proveedores que ofrecen planes de alojamiento web específicos, para alojar tiendas de comercio online o e-commerce, con soluciones pre-instaladas y gestionadas, similar a como ocurre con los planes de <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">alojamiento WordPress</a>. Se trata pues, de planes de hosting que nos ofrecen una plataforma como <a href="https://en.wikipedia.org/wiki/PrestaShop" target="_blank">Prestashop</a> o <a href="https://en.wikipedia.org/wiki/WooCommerce" target="_blank">WooCommerce</a>, listas para que el usuario configure su tienda y empiece a ofrecer sus productos en internet, sin tener que preocuparse de su instalación o de aplicar actualizaciones.</p>
           <p>Igual que pasa con WordPress, estas plataformas suelen ser opensource, con lo que un usuario avanzado podría contratar un <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> y alojar ahí su PrestaShop o similar. Sin embargo, el hecho de que se ofrezcan planes de <strong>hosting e-commerce</strong> con las soluciones pre-instaladas, facilitan mucho la vida a los usuarios estándar y ahorran trabajo a aquellos que de otra forma, tendrían que haberse instalado y configurado ellos mismos la plataforma en un Hosting Web tradicional.</p>
           <p>En <a href="https://quehosting.es">quehosting.es</a> hemos querido incluir planes de <strong>hosting e-commerce</strong> de diferentes proveedores, para facilitar al usuario elegir el que mejor se adapte a sus necesidades, de entre proveedores tan conocidos como:</p>
@@ -150,8 +151,5 @@
       </footer>
     </main>
   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/hosting-compare.js"></script>
   </body>
 </html>
