--- a/www/comparativas/hosting-web.html
+++ b/www/comparativas/hosting-web.html
@@ -62,7 +62,8 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/comparativa.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -83,7 +84,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es/">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -106,10 +107,10 @@
 
       <div class="container">
         
-        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting Web</h1>
+        <h1 class="margin-100-50">Comparativa Hosting Web</h1>
         <h2>¿Qué es un hosting Web?</h2>
 
-        <div style="margin: 50px 0px 50px 0px;">
+        <div class="margin-50-50">
           <p>No hay ningún proveedor de hosting que no ofrezca planes de alojamiento para <strong>Hosting Web</strong>, aunque algunos usan otros nombres como <strong>Hosting SSD</strong> o símplemente <strong>Hosting Compartido</strong>. Se les llame de una manera o de otra, un <strong>Hosting Web</strong> no es más que un Hosting con un servidor web instalado listo para alojar páginas web. Este servidor web (también llamado "HTTP") puede ser un <a href="https://es.wikipedia.org/wiki/Servidor_HTTP_Apache" target="_blank">Apache</a>, un <a href="https://es.wikipedia.org/wiki/Nginx" target="_blank">Nginx</a> o cualquier otro, aunque al usuario normalmente no le afectará que su proveedor use un servidor web u otro.</p>
           <p>Así pues, este tipo de alojamientos, típicamente ofrecerán un acceso FTP al servidor, donde deberemos subir nuestras páginas web, sin importarnos demasiado de la configuración del servidor HTTP. Así pues, al contrario que un <a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a>, donde ya contaremos con un WordPress preinstalado y con el que ya podríamos empezar a publicar contenido, en un <strong>Hosting Web</strong> deberemos crear nosotros nuestras páginas web antes de poder publicar nada.</p>
           <p>Cabe destacar que la mayoría de <strong>Hosting Web</strong> ofertados ofrecen servidores HTTP configurados para alojar proyectos PHP, además de cualquier sitio estático (HTML, css y/o javascript). Si estás pensando en alojar un proyecto propio, desarrollado con tecnología PHP, es importante conocer las versiones de PHP que soporta el aloamiento, para asegurarte de que el proyecto no tendrá problemas de compatibilidad de versiones.</p>
@@ -161,8 +162,5 @@
       </footer>
     </main>
   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/hosting-compare.js"></script>
   </body>
 </html>
