--- a/www/comparativas/hosting-wordpress.html
+++ b/www/comparativas/hosting-wordpress.html
@@ -62,7 +62,8 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/comparativa.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -83,7 +84,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es/">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -106,10 +107,10 @@
 
       <div class="container">
         
-        <h1 style="margin: 100px 0px 50px 0px;">Comparativa Hosting WordPress</h1>
+        <h1 class="margin-100-50">Comparativa Hosting WordPress</h1>
         <h2>¿Qué es un hosting WordPress?</h2>
 
-        <div style="margin: 50px 0px 50px 0px;">
+        <div class="margin-50-50">
           <p><strong>WordPress</strong> es sin duda alguna la aplicación más usada para la creación de todo tipo de páginas web. Si bien en sus inicios era una herramienta que facilitaba la creación de páginas personales o blogs, la aparición de decenas de miles de plugins, temas y extensiones hacen que hoy en día encontremos páginas web hechas con <strong>WordPress</strong> para prácticamente cualquier caso de uso, incluyendo e-commerce, blogs, catálogos o páginas de empresa o proyectos.</p>
           <p>Mayormente, el éxito de WordPress se debe a su facilidad de uso; cualquiera pese a no tener conocimientos de informática puede crear su propia web con <strong>WordPress</strong>, aunque si bien es cierto que con conocimientos técnicos se podrá llevar un proyecto <strong>WordPress</strong> al siguiente nivel.</p>
           <p>Es por su popularidad y por tanto por su alta demanda, que los planes de alojamiento específicamente para <strong>WordPress</strong> se encuentran presentes en todo buen proveedor de hosting que se precie, siendo de los más demandados por los usuarios. Éstos suelen ofrecer alojamiento con <strong>WordPress</strong> ya pre-instalado y totalmente gestionado, con lo que el usuario únicamente debería centrarse en su personalización para poder empezar ya a subir contenido a su sitio web, olvidándose así de tareas como la instalación de actualizaciones.</p>
@@ -171,8 +172,5 @@
       </footer>
     </main>
   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/hosting-compare.js"></script>
   </body>
 </html>
