--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -57,7 +57,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -68,7 +68,7 @@
               <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
+              <a class="nav-link" href="https://quehosting.es/faq.html">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
@@ -135,7 +135,7 @@
 
                   <!-- FILTER HEADER-->
                   <div class='row' style="padding: 0px 00px 20px 20px;">
-                    <img src="img/filter.svg" width="25" height="25" style="height: 25px; margin-right: 15px;" /> Filtros
+                    <img src="https://quehosting.es/img/filter.svg" width="25" height="25" style="height: 25px; margin-right: 15px;" /> Filtros
                   </div>
 
                   <!-- FORM HOSTING-TYPE -->
@@ -263,8 +263,8 @@
     </main>
   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/viewport.js"></script>
-    <script src="js/hosting-compare.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://quehosting.es/js/viewport.js"></script>
+    <script src="https://quehosting.es/js/hosting-compare.js"></script>
   </body>
 </html>
