--- a/www/comparativas/hosting-wordpress.html
+++ b/www/comparativas/hosting-wordpress.html
@@ -65,6 +65,14 @@
     <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
     <link href="https://quehosting.es/css/comparativa.css" rel="stylesheet">
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-NHB9GVH');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
     <script>
@@ -74,9 +82,14 @@
 
       gtag('config', 'G-80JXQ3H0D7');
     </script>
+    <!-- End Google Analytics -->
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHB9GVH"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <nav class="navbar navbar-expand-md fixed-top" style="background-color: #302546;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
