--- a/www/comparativas/hosting-ecommerce.html
+++ b/www/comparativas/hosting-ecommerce.html
@@ -1,19 +1,45 @@
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="404 Página no encontrada">
+    <meta name="description" content="Comparativa entre los principales proveedores de Hosting para alojar tu e-commerce o tienda online.">
     <meta name="author" content="Adrian Perez">
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Comparador de hosting web" />
-    <meta property="og:description" content="404 Página no encontrada" />
+    <meta property="og:title" content="Comparativa Hosting e-commerce o tienda online" />
+    <meta property="og:description" content="Comparativa entre los principales proveedores de Hosting para alojar tu e-commerce o tienda online." />
     <meta property="og:url" content="https://quehosting.es/" />
     <meta property="og:site_name" content="Comparativa Hosting España" />
-    <title>404 Página no encontrada</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:label1" content="Tiempo de lectura" />
+    <meta name="twitter:data1" content="2 minutos" />
+    <title>Comparativa Hosting e-commerce o tienda online</title>
 
-    <link rel="canonical" href="https://quehosting.es">
+    <link rel="canonical" href="https://quehosting.es/comparativas/hosting-ecommerce.html">
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "QueHosting.es",
+          "item": "https://quehosting.es"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Comparativas",
+          "item": "https://quehosting.es/comparativas"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Hosting e-commerce"
+        }]
+      }
+    </script>
 
     <!-- Bootstrap core CSS -->
     <link href="https://getbootstrap.com/docs/4.5/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -37,6 +63,7 @@
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
     <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/comparativa.css" rel="stylesheet">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -70,7 +97,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="https://quehosting.es">
+          <a href="https://quehosting.es/">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -78,7 +105,7 @@
         <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="https://quehosting.es">Inicio</a>
+              <a class="nav-link" href="https://quehosting.es/index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://quehosting.es/faq.html">Preguntas frecuentes</a>
@@ -90,12 +117,43 @@
 
     <main role="main">
 
+
       <div class="container">
-        <h1 class="text-center" style="margin: 100px 0px 50px 0px;">Error 404 - Página no encontrada</h1>
-        <p class="text-center">La página que buscabas no existe. Quizá hayas llegado aquí por error o al introducir una url incorrecta.</p>
-        <p class="text-center">Te recomendamos que vuelvas a la página de inicio y navegues a través de los enlaces de la propia web.</p>
-        <p class="text-center" style="margin-bottom: 100px;"><a class="btn btn-lg btn-primary" href="index.html" role="button">Página de inicio</a></p>
+        
+        <h1 class="margin-100-50">Comparativa Hosting e-commerce</h1>
+        <h2>¿Qué es un hosting e-commerce o tienda online?</h2>
+
+        <div class="margin-50-50">
+          <p>Cada vez más son los proveedores que ofrecen planes de alojamiento web específicos, para alojar tiendas de comercio online o e-commerce, con soluciones pre-instaladas y gestionadas, similar a como ocurre con los planes de <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">alojamiento WordPress</a>. Se trata pues, de planes de hosting que nos ofrecen una plataforma como <a href="https://en.wikipedia.org/wiki/PrestaShop" target="_blank">Prestashop</a> o <a href="https://en.wikipedia.org/wiki/WooCommerce" target="_blank">WooCommerce</a>, listas para que el usuario configure su tienda y empiece a ofrecer sus productos en internet, sin tener que preocuparse de su instalación o de aplicar actualizaciones.</p>
+          <p>Igual que pasa con WordPress, estas plataformas suelen ser opensource, con lo que un usuario avanzado podría contratar un <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> y alojar ahí su PrestaShop o similar. Sin embargo, el hecho de que se ofrezcan planes de <strong>hosting e-commerce</strong> con las soluciones pre-instaladas, facilitan mucho la vida a los usuarios estándar y ahorran trabajo a aquellos que de otra forma, tendrían que haberse instalado y configurado ellos mismos la plataforma en un Hosting Web tradicional.</p>
+          <p>En <a href="https://quehosting.es">quehosting.es</a> hemos querido incluir planes de <strong>hosting e-commerce</strong> de diferentes proveedores, para facilitar al usuario elegir el que mejor se adapte a sus necesidades, de entre proveedores tan conocidos como:</p>
+        </div>
+        
+        <table class="table">
+          <caption>Hosting e-commerce</caption>
+          <tr>
+            <th>Proveedor</th>
+            <th>Planes WordPress</th>
+            <th>Precios</th>
+          </tr>
+          <tr>
+            <td>Hostinet</td>
+            <td>Prestashop o WooCommerce</td>
+            <td>desde 4.43€</td>
+          </tr>
+          <tr>
+            <td>SiteGround</td>
+            <td>StartUp, GrowBig o GoGeek</td>
+            <td>desde 5.99€</td>
+          </tr>
+          <tr>
+            <td>TropicalServer</td>
+            <td>PrestaShop-S, M, L, XL o XXL</td>
+            <td>desde 9.91€</td>
+          </tr>
+        </table>
       </div><!-- /.container -->
+
 
       <!-- FOOTER -->
       <footer class="container small">
@@ -104,7 +162,6 @@
         <p class="text-center">&copy; 2021 QueHosting.es</p>
         <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> | <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Hosting e-commerce</a></p>
       </footer>
-
     </main>
   
   </body>
