--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,15 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
-    <link href="css/hosting-compare.css" rel="stylesheet">
+    <link href="https://quehosting.es/css/hosting-compare.css" rel="stylesheet">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NHB9GVH');</script>
+    <!-- End Google Tag Manager -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
@@ -47,9 +55,14 @@
 
       gtag('config', 'G-80JXQ3H0D7');
     </script>
+    <!-- End Google Analytics -->
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHB9GVH"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <nav class="navbar navbar-expand-md fixed-top" style="background-color: #302546;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +70,7 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <a href="index.html">
+          <a href="https://quehosting.es">
             <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
           </a>
         </div>
@@ -68,7 +81,7 @@
               <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
+              <a class="nav-link" href="https://quehosting.es/faq.html">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
@@ -135,7 +148,7 @@
 
                   <!-- FILTER HEADER-->
                   <div class='row' style="padding: 0px 00px 20px 20px;">
-                    <img src="img/filter.svg" style="height: 25px; margin-right: 15px;" /> Filtros
+                    <img src="https://quehosting.es/img/filter.svg" width="25" height="25" style="height: 25px; margin-right: 15px;" /> Filtros
                   </div>
 
                   <!-- FORM HOSTING-TYPE -->
@@ -258,12 +271,13 @@
         <hr class="featurette-divider" style="margin: 20px 0;">
         <p class="text-center">El diseño de este sitio web bebe del template de Boostrap "<a href="https://getbootstrap.com/docs/4.5/examples/carousel/" target="_blank">Carousel</a>" por Mark Otto, Jacob Thornton y otros.</p>
         <p class="text-center">&copy; 2021 QueHosting.es</p>
+        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a> | <a href="https://quehosting.es/comparativas/hosting-web.html">Hosting Web</a> | <a href="https://quehosting.es/comparativas/hosting-ecommerce.html">Hosting e-commerce</a></p>
       </footer>
     </main>
   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
-    <script src="js/viewport.js"></script>
-    <script src="js/hosting-compare.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://quehosting.es/js/viewport.js"></script>
+    <script src="https://quehosting.es/js/hosting-compare.js"></script>
   </body>
 </html>
